# Task-2.12

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  TCP_Receiver.cpp  TCP_Receiver.h  TCP_Sender.cpp  TCP_Sender.h  TCP_Sender_Receiver.cpp  TCP_Sender_Receiver.h
src/tests/: CMakeLists.txt  tests.cpp
